// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`publications getAllAreasOfInterest should load raw feed data with empty cache 1`] = `
Object {
  "ETag": null,
  "Enabled": true,
  "IdentifierPrefix": "AMP",
  "LastModified": "2021-02-23T00:00:00",
  "Name": "Antimicrobial prescribing",
  "PluralName": "Antimicrobial prescribing",
  "_links": Object {
    "self": Array [
      Object {},
    ],
  },
}
`;

exports[`publications getAllProductTypes should load raw feed data with empty cache 1`] = `
Object {
  "ETag": null,
  "Enabled": true,
  "Group": "Advice",
  "IdentifierPrefix": "APA",
  "LastModified": "2016-09-06T00:00:00",
  "Name": "Antimicrobial prescribing evidence summary",
  "Parent": "ES",
  "PluralName": "Antimicrobial prescribing evidence summaries",
  "_links": Object {
    "self": Array [
      Object {},
    ],
  },
}
`;

exports[`publications getAllProducts should load raw feed data with empty cache 1`] = `
Object {
  "areasOfInterestList": Array [],
  "developedAs": null,
  "eTag": null,
  "id": "CG1",
  "lastMajorModificationDate": "2002-12-01T00:00:00",
  "lastModified": "2020-09-02T08:58:37.35792Z",
  "productGroup": "Guideline",
  "productStatus": "Withdrawn",
  "productType": "CG",
  "publishedDate": "2002-12-01T00:00:00",
  "relevantTo": Array [],
  "title": "Schizophrenia",
}
`;
